[gd_scene load_steps=31 format=1]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/Player/Katty_D1.png" type="Texture" id=2]
[ext_resource path="res://Images/Player/Katty_D2.png" type="Texture" id=3]
[ext_resource path="res://Images/Player/Katty_D3.png" type="Texture" id=4]
[ext_resource path="res://Images/Player/Katty_U1.png" type="Texture" id=5]
[ext_resource path="res://Images/Player/Katty_U2.png" type="Texture" id=6]
[ext_resource path="res://Images/Player/Katty_U3.png" type="Texture" id=7]
[ext_resource path="res://Images/Player/Katty_L1.png" type="Texture" id=8]
[ext_resource path="res://Images/Player/Katty_L2.png" type="Texture" id=9]
[ext_resource path="res://Images/Player/Katty_L3.png" type="Texture" id=10]
[ext_resource path="res://Images/Player/Katty_R2.png" type="Texture" id=11]
[ext_resource path="res://Images/Player/Katty_R1.png" type="Texture" id=12]
[ext_resource path="res://Images/Player/Katty_R3.png" type="Texture" id=13]
[ext_resource path="res://Images/Player2/U1.png" type="Texture" id=14]
[ext_resource path="res://Images/Player2/U2.png" type="Texture" id=15]
[ext_resource path="res://Images/Player2/U3.png" type="Texture" id=16]
[ext_resource path="res://Images/Player2/D1.png" type="Texture" id=17]
[ext_resource path="res://Images/Player2/D2.png" type="Texture" id=18]
[ext_resource path="res://Images/Player2/D3.png" type="Texture" id=19]
[ext_resource path="res://Images/Player2/L1.png" type="Texture" id=20]
[ext_resource path="res://Images/Player2/L2.png" type="Texture" id=21]
[ext_resource path="res://Images/Player2/L3.png" type="Texture" id=22]
[ext_resource path="res://Images/Player2/R2.png" type="Texture" id=23]
[ext_resource path="res://Images/Player2/R1.png" type="Texture" id=24]
[ext_resource path="res://Images/Player2/R3.png" type="Texture" id=25]
[ext_resource path="res://Images/Player/Shadow.png" type="Texture" id=26]
[ext_resource path="res://Modules/ActionMenu.tscn" type="PackedScene" id=27]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.3157, 28.5215 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "MoveUp",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "MoveDown",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "MoveRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "MoveUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "MoveDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "MoveRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.44588, 0, -17.2402 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Clothes_1" type="AnimatedSprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, -16 )
frames = SubResource( 2 )
animation = "IdleDown"

[node name="Clothes_2" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, -37 )
frames = SubResource( 3 )
animation = "IdleDown"

[node name="Shadow" type="Sprite" parent="."]

visibility/opacity = 0.25
transform/pos = Vector2( 0, 22 )
texture = ExtResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -17.2402 )
transform/scale = Vector2( 1, 1.44588 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="."]

offset = Vector2( 0, -96 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Sound" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ActionMenu" parent="." instance=ExtResource( 27 )]

transform/pos = Vector2( 0, -41 )
z/z = 100


